More cleanup of date picker css to prevent cross browser layout issues.

--- a/src/css/myt.scss
+++ b/src/css/myt.scss
@@ -274,47 +274,31 @@ select.mytNativeInput{margin:0px;}
             License: MIT
 ***/
 .datepicker {
-	display:inline-block;
 	font:15px/1.5 Arial, Helvetica, sans-serif;
 	font-weight:300;
+	user-select:none;
+	-webkit-user-select:none;
+	-moz-user-select:none;
 }
 
-/*
- * datepicker_header
- */
+/* datepicker_header */
 .datepicker > .datepicker_header {
 	color:#3f3f3f;
 	text-align:center;
 	font-size:12px;
 	font-weight:bold;
-	user-select:none;
-		-webkit-user-select:none;
-		-moz-user-select:none;
-}
-
-.datepicker > .datepicker_header > a {
-	user-select:none;
-		-webkit-user-select:none;
-		-moz-user-select:none;
-	cursor:pointer;
-	color:#3b7796;
-}
-
-.datepicker > .datepicker_header > a:hover {
-	color:#303030;
-}
-
-.datepicker > .datepicker_header > a:active {
-	color:#ffffff;
+	height:18px;
 }
 
 .datepicker > .datepicker_header > span {
 	margin-left:20px;
 	margin-right:20px;
-	user-select:none;
-		-webkit-user-select:none;
-		-moz-user-select:none;
 }
+
+/* Next and prev month buttons */
+.datepicker > .datepicker_header > a {color:#3b7796;cursor:pointer;}
+.datepicker > .datepicker_header > a:hover {color:#303030;}
+.datepicker > .datepicker_header > a:active {color:#ffffff;}
 
 .datepicker > .datepicker_header > .icon-home {
 	position:absolute;
@@ -326,18 +310,9 @@ select.mytNativeInput{margin:0px;}
 	height:11pt;
 	vertical-align:middle;
 }
+.datepicker > .datepicker_header > .icon-home > svg > g > path {fill:#3b7796;}
+.datepicker > .datepicker_header > a:hover > svg > g > path {fill:#303030;}
 
-.datepicker > .datepicker_header > .icon-home > svg > g > path {
-	fill:#3b7796;
-}
-
-.datepicker > .datepicker_header > a:hover > svg > g > path {
-	fill:#303030; /* Icon button hover color */
-}
-
-/*
- * datepicker_inner_container 
-*/
 .datepicker > .datepicker_inner_container:after {
 	content:".";
 	display:block;
@@ -346,22 +321,17 @@ select.mytNativeInput{margin:0px;}
 	visibility:hidden;
 }
 
-/*
- * datepicker_inner_container > datepicker_calendar
-*/
+/* Calendar */
 .datepicker > .datepicker_inner_container > .datepicker_calendar {
 	float:left;
-	width:auto;
+	width:175px;
+	height:175px;
 	border-right:1px solid #c8c8c8;
 }
 
-.datepicker > .datepicker_inner_container > .datepicker_calendar > .datepicker_table {
-	border-spacing:0px;
-}
+.datepicker > .datepicker_inner_container > .datepicker_calendar > .datepicker_table {border-spacing:0px;}
 
-/*
- * datepicker_inner_container > datepicker_calendar > datepicker_table > tbody > tr > th (WDay-cell)
- */
+/* Weekday Cell */
 .datepicker > .datepicker_inner_container > .datepicker_calendar > .datepicker_table > tbody > tr > th {
 	color:#646464;
 	width:25px;
@@ -374,77 +344,40 @@ select.mytNativeInput{margin:0px;}
 	padding-top:1px;
 	padding-bottom:3px;
 }
-
-/*
- * datepicker_inner_container > datepicker_calendar > datepicker_table > tbody > tr > td (Day-cell)
- */
+/* Day Cell */
 .datepicker > .datepicker_inner_container > .datepicker_calendar > .datepicker_table > tbody > tr > td {
 	color:#000000;
 	width:25px;
 	height:21px;
 	font-size:12px;
 	text-align:center;
-	user-select:none;
-		-webkit-user-select:none;
-		-moz-user-select:none;
 	cursor:pointer;
 	padding-left:0px;
 	padding-right:0px;
 	padding-top:2px;
 	padding-bottom:2px;
 }
-
 .datepicker > .datepicker_inner_container > .datepicker_calendar > .datepicker_table > tbody > tr > td.today {
 	border-bottom:#bfbfbf solid 2px;
 	padding-bottom:0px;
 }
+.datepicker > .datepicker_inner_container > .datepicker_calendar > .datepicker_table > tbody > tr > td.wday_sat {color:#0044aa;}
+.datepicker > .datepicker_inner_container > .datepicker_calendar > .datepicker_table > tbody > tr > td.wday_sun {color:#e13b00;}
+.datepicker > .datepicker_inner_container > .datepicker_calendar > .datepicker_table > tbody > tr > td.day_another_month {color:#cccccc;}
+.datepicker > .datepicker_inner_container > .datepicker_calendar > .datepicker_table > tbody > tr > td.day_in_past {cursor:default;color:#cccccc;}
+.datepicker > .datepicker_inner_container > .datepicker_calendar > .datepicker_table > tbody > tr > td.day_in_unallowed {cursor:default;color:#cccccc;}
+.datepicker > .datepicker_inner_container > .datepicker_calendar > .datepicker_table > tbody > tr > td.out_of_range {cursor:default;color:#cccccc;}
+.datepicker > .datepicker_inner_container > .datepicker_calendar > .datepicker_table > tbody > tr > td.active {color:#ffffff;background-color:#808080;}
+.datepicker > .datepicker_inner_container > .datepicker_calendar > .datepicker_table > tbody > tr > td.hover {color:#000000;background-color:#c8c8c8;}
 
-.datepicker > .datepicker_inner_container > .datepicker_calendar > .datepicker_table > tbody > tr > td.wday_sat {
-	color:#0044aa;
-}
-
-.datepicker > .datepicker_inner_container > .datepicker_calendar > .datepicker_table > tbody > tr > td.wday_sun {
-	color:#e13b00;
-}
-
-.datepicker > .datepicker_inner_container > .datepicker_calendar > .datepicker_table > tbody > tr > td.day_another_month {
-	color:#cccccc;
-}
-
-.datepicker > .datepicker_inner_container > .datepicker_calendar > .datepicker_table > tbody > tr > td.day_in_past {
-	cursor:default;
-	color:#cccccc;
-}
-
-.datepicker > .datepicker_inner_container > .datepicker_calendar > .datepicker_table > tbody > tr > td.day_in_unallowed {
-	cursor:default;
-	color:#cccccc;
-}
-
-.datepicker > .datepicker_inner_container > .datepicker_calendar > .datepicker_table > tbody > tr > td.out_of_range {
-	cursor:default;
-	color:#cccccc;
-}
-
-.datepicker > .datepicker_inner_container > .datepicker_calendar > .datepicker_table > tbody > tr > td.active {
-	color:#ffffff;
-	background-color:#808080;
-}
-
-.datepicker > .datepicker_inner_container > .datepicker_calendar > .datepicker_table > tbody > tr > td.hover {
-	color:#000000;
-	background-color:#c8c8c8;
-}
-
-/*
- * datepicker_inner_container > datepicker_timelist
- */
+/* Time List */
 .datepicker > .datepicker_inner_container > .datepicker_timelist {
 	float:left;
+	width:64px;
+	height:175px;
 	overflow:auto;
 	overflow-x:hidden;
 }
-
 .datepicker > .datepicker_inner_container > .datepicker_timelist > div.timelist_item {
 	padding-top:3px;
 	padding-bottom:3px;
@@ -452,28 +385,10 @@ select.mytNativeInput{margin:0px;}
 	width:50px;
 	height:19px;
 	font-size:12px;
-	user-select:none;
-		-webkit-user-select:none;
-		-moz-user-select:none;
 	cursor:pointer;
 }
-
-.datepicker > .datepicker_inner_container > .datepicker_timelist > div.timelist_item.time_in_past {
-	cursor:default;
-	color:#cccccc;
-}
-
-.datepicker > .datepicker_inner_container > .datepicker_timelist > div.timelist_item.out_of_range {
-	cursor:default;
-	color:#cccccc;
-}
-.datepicker > .datepicker_inner_container > .datepicker_timelist > div.timelist_item.active {
-	color:#ffffff;
-	background-color:#808080;
-}
-
-.datepicker > .datepicker_inner_container > .datepicker_timelist > div.timelist_item.hover {
-	color:#000000;
-	background-color:#c8c8c8;
-}
+.datepicker > .datepicker_inner_container > .datepicker_timelist > div.timelist_item.time_in_past {cursor:default;color:#cccccc;}
+.datepicker > .datepicker_inner_container > .datepicker_timelist > div.timelist_item.out_of_range {cursor:default;color:#cccccc;}
+.datepicker > .datepicker_inner_container > .datepicker_timelist > div.timelist_item.active {color:#ffffff;background-color:#808080;}
+.datepicker > .datepicker_inner_container > .datepicker_timelist > div.timelist_item.hover {color:#000000;background-color:#c8c8c8;}
 /*** END: jquery-simple-datetimepicker v1.12.0 ***/
